# qa_guru_hw_18

./: pyproject.toml
